Bug: index.css button gap

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -70,7 +70,7 @@ body{
         border-radius: 5px;
         transition: all .5s ease;
         cursor: pointer;
-        font-size: 1.5vw;
+        font-size: 1.5em;
     }
 
     .elite:hover {
